==> pszlzheng/Pslzheng_Go_Repository/project_lora/LORA/lora_app.c <==
#include "lora_app.h"
#include "lora_ui.h"
#include "lora_cfg.h"
#include "usart3.h"
#include "string.h"
#include "led.h"
#include "delay.h"
#include "lcd.h"
#include "stdio.h"
#include "text.h"
#include "key.h"
#include "usart.h"
#include "ds18b20.h"
#include "pcf8574.h"
#include "adc.h"

void Aux_Int(u8 mode)
{
	if(!mode)
	{
		HAL_NVIC_DisableIRQ(EXTI15_10_IRQn);//失能中断线11
	}
	else
	{
		if(mode==1)
		{
			 GPIO_Initure.Pin=GPIO_PIN_11; //PI11
       GPIO_Initure.Mode=GPIO_MODE_IT_RISING;//上升沿触发
		}
			
	  else if(mode==2)
		{
			 GPIO_Initure.Pin=GPIO_PIN_11; //PI11
       GPIO_Initure.Mode=GPIO_MODE_IT_FALLING;//下降沿触发
		}
		
		 HAL_GPIO_Init(GPIOI,&GPIO_Initure);//重新初始化
	   __HAL_GPIO_EXTI_CLEAR_IT(GPIO_PIN_11);//清除中断标志位
		 HAL_NVIC_SetPriority(EXTI15_10_IRQn,2,0); //抢占优先级为2，子优先级为0
		 HAL_NVIC_EnableIRQ(EXTI15_10_IRQn);//使能
	}
	Int_mode = mode;//记录中断模式
}

u8 LoRa_Init(void)
{
	u8 retry=0;
	u8 temp=1;

	__HAL_RCC_GPIOA_CLK_ENABLE();          //开启GPIOA时钟
	__HAL_RCC_GPIOI_CLK_ENABLE();          //开启GPIOI时钟
	 
	GPIO_Initure.Pin=GPIO_PIN_4;           //PA4
	GPIO_Initure.Mode=GPIO_MODE_OUTPUT_PP; //推挽输出
	GPIO_Initure.Pull=GPIO_PULLDOWN;       //下拉
	GPIO_Initure.Speed=GPIO_SPEED_HIGH;    //高速
	HAL_GPIO_Init(GPIOA,&GPIO_Initure);

	GPIO_Initure.Pin=GPIO_PIN_11;          //PI11
	GPIO_Initure.Mode=GPIO_MODE_IT_RISING; //上升沿触发
	GPIO_Initure.Pull=GPIO_PULLDOWN;       //下拉
	GPIO_Initure.Speed=GPIO_SPEED_HIGH;    //高速
	HAL_GPIO_Init(GPIOI,&GPIO_Initure);
	
	LORA_MD0=0;				//MD0,AUX都为0时，lora进入一般模式，进行透传
	LORA_AUX=0;
	
	while(LORA_AUX)//确保LORA模块在空闲状态下(LORA_AUX=0)
	{
		 Show_Str(40+30,50+20,200,16,"BUSYING NOW!!!",16,0); 	
		 delay_ms(500);
		 Show_Str(40+30,50+20,200,16,"______________",16,0);
     delay_ms(100);		 
	}
	usart3_init(115200);//初始化串口3
	LORA_MD0=1;//进入AT（配置）模式
	delay_ms(40);
	retry=3;
	while(retry--)
	{
	 if(!lora_send_cmd("AT","OK",70))
	 {
		 temp=0;//检测成功
		 break;
	 }	
	}
	if(retry==0) temp=1;//检测失败
	return temp;
}

void LoRa_Set(void)
{
	u8 sendbuf[20];
	u8 lora_addrh,lora_addrl=0;
	
	usart3_set(LORA_TTLBPS_115200,LORA_TTLPAR_8N1);//进入配置模式前设置通信波特率和校验位(115200 8位数据 1位停止 无数据校验）
	usart3_rx(1);//开启串口3接收
	
	while(LORA_AUX);//等待模块空闲
	LORA_MD0=1; 		//进入配置模式
	delay_ms(40);
	Lora_mode=0;//标记"配置模式"
	
	lora_addrh = (LoRa_CFG.addr>>8)&0xff;//通信地址的高八位
	lora_addrl = LoRa_CFG.addr&0xff;//通信地址低八位
	sprintf((char*)sendbuf,"AT+ADDR=%02x,%02x",lora_addrh,lora_addrl);//设置设备地址
	lora_send_cmd(sendbuf,"OK",50);
	sprintf((char*)sendbuf,"AT+WLRATE=%d,%d",LoRa_CFG.chn,LoRa_CFG.wlrate);//设置信道和空中速率
	lora_send_cmd(sendbuf,"OK",50);
	sprintf((char*)sendbuf,"AT+TPOWER=%d",LoRa_CFG.power);//设置发射功率
	lora_send_cmd(sendbuf,"OK",50);
	sprintf((char*)sendbuf,"AT+CWMODE=%d",LoRa_CFG.mode);//设置工作模式
	lora_send_cmd(sendbuf,"OK",50);
	sprintf((char*)sendbuf,"AT+TMODE=%d",LoRa_CFG.mode_sta);//设置发送状态
	lora_send_cmd(sendbuf,"OK",50);
	sprintf((char*)sendbuf,"AT+WLTIME=%d",LoRa_CFG.wltime);//设置睡眠时间
	lora_send_cmd(sendbuf,"OK",50);
	sprintf((char*)sendbuf,"AT+UART=%d,%d",LoRa_CFG.bps,LoRa_CFG.parity);//设置串口波特率、数据校验位
	lora_send_cmd(sendbuf,"OK",50);

	LORA_MD0=0;//退出配置,进入通信
	delay_ms(40);
	while(LORA_AUX);//判断是否空闲(模块会重新配置参数)
	USART3_RX_STA=0;
	Lora_mode=1;//标记"接收模式"
	usart3_set(LoRa_CFG.bps,LoRa_CFG.parity);//返回通信,更新通信串口配置(波特率、数据校验位)
	Aux_Int(1);//设置LORA_AUX上升沿中断
}

void LoRa_SendData(int counter)//Lora模块发送数据
{      
	float temperature=20;
	float ph=7.5;
	float oxy=5.2;
  u16 addr;
	u16 adcx;
	u16 adcy;
	u8 chn;
	u16 i=0;
	PCF8574_ReadBit(BEEP_IO);
	if(LoRa_CFG.mode_sta == LORA_STA_Tran)//透明传输
	{
		temperature=DS18B20_Get_Temp();
		adcx=Get_Adc_Average(ADC_CHANNEL_5,10);//获取通道5的20次取平均溶氧量转换值
		adcy=Get_Adc_Average(ADC_CHANNEL_6,10);//获取通道6的20次取平均酸碱度转换值
		oxy=adcx*0.012;
		ph=adcy*0.0050;
		sprintf((char*)Tran_Data,"%s-%.2f-%.2f-%.2f-%s-%d","STM_TWO",ph,temperature/10,oxy,"1",counter);
		u3_printf("%s",Tran_Data);
		LCD_Fill(0,195,240,220,WHITE);//清除显示
		Show_Str_Mid(10,195,Tran_Data,16,240);
	}
	else if(LoRa_CFG.mode_sta == LORA_STA_Dire)//定向传输
	{
		addr = (u16)obj_addr;//目标地址
		chn = obj_chn;//目标信道
		date[i++] =(addr>>8)&0xff;//高位地址
		date[i++] = addr&0xff;//低位地址
		date[i] = chn;  //无线信道
		for(i=0;i<Dire_DateLen;i++)//数据写到发送BUFF
		{
			date[3+i] = Dire_Date[i];
		}
		for(i=0;i<(Dire_DateLen+3);i++)
		{
			while(__HAL_UART_GET_FLAG(&UART3_Handler,UART_FLAG_TXE)== RESET);//循环发送,直到发送完毕   
			HAL_UART_Transmit(&UART3_Handler,&date[i],1,1000);	
		}	
    //将十六进制的数据转化为字符串打印在lcd_buff数组
		sprintf((char*)wlcd_buff,"%x %x %x %x %x %x %x %x",
		date[0],date[1],date[2],date[3],date[4],date[5],date[6],date[7]);	
		LCD_Fill(0,200,240,230,WHITE);//清除显示
		Show_Str_Mid(10,200,wlcd_buff,16,240);//显示发送的数据		
	  Dire_Date[4]++;//Dire_Date[4]数据更新	
	}
}

void LoRa_ReceData(void)//Lora模块接收数据
{
	u16 i=0;
	u16 len=0;
	//有数据来了
	if(USART3_RX_STA&0x8000)
	{
		len = USART3_RX_STA&0X7FFF;
		USART3_RX_BUF[len]=0;//添加结束符
		USART3_RX_STA=0;

		for(i=0;i<len;i++)
		{
			while(__HAL_UART_GET_FLAG(&UART1_Handler,UART_FLAG_TXE)== RESET);//循环发送,直到发送完毕   
			HAL_UART_Transmit(&UART1_Handler,&USART3_RX_BUF[i],1,1000);	
		}
		LCD_Fill(10,260,240,320,WHITE);
		if(LoRa_CFG.mode_sta==LORA_STA_Tran)//透明传输
		{
			if (USART3_RX_BUF[6]=='1')
			{
				Show_Str_Mid(10,270,USART3_RX_BUF,16,240);//显示接收到的数据
				Lora_analyze(USART3_RX_BUF);
			}
		}
		else if(LoRa_CFG.mode_sta==LORA_STA_Dire)//定向传输
		{
			//将十六进制的数据转化为字符串打印在lcd_buff数组
			sprintf((char*)rlcd_buff,"%x %x %x %x %x",USART3_RX_BUF[0],USART3_RX_BUF[1],USART3_RX_BUF[2],USART3_RX_BUF[3],USART3_RX_BUF[4]);
			Show_Str_Mid(10,270,rlcd_buff,16,240);//显示接收到的数据
			delay_ms(1000);
			Lora_analyze(rlcd_buff);
		}
		memset((char*)USART3_RX_BUF,0x00,len);//串口接收缓冲区清0
	}
}

void Lora_Test(void)
{
	u8 t=0;
	u8 key=0;
	u8 netpro=0;
	LCD_Clear(WHITE);
	POINT_COLOR=RED;
	Show_Str_Mid(0,30,"SMART FISH POOL SYSTEM",16,240); 
	while(LoRa_Init())//初始化ATK-LORA-01模块
	{
		Show_Str(40+30,50+20,200,16,"NO DEVICE DETECTED!!!",16,0); 	
		delay_ms(300);
		Show_Str(40+30,50+20,200,16,"BLANK",16,0);
	}
	Show_Str(40+30,50+20,200,16,"DEVICE DETECTED!!!",16,0);
  delay_ms(500); 	
	Menu_ui();//菜单
	while(1)
	{
		key = KEY_Scan(0);
		if(key)
		{
			Show_Str(30+10,95+45+netpro*25,200,16,"  ",16,0);//清空之前的显示
			if(key==KEY0_PRES)//KEY0按下
			{
				if(netpro<6)netpro++;
				else netpro=0;
			}
			else if(key==KEY1_PRES)//KEY1按下
			{
				if(netpro>0)netpro--;
				else netpro=6; 
			}
			else if(key==WKUP_PRES)//KEY_UP按下
			{
				if(netpro==0)//进入通信选项
				{
				  LoRa_Process();//开始数据测试
				  netpro=0;//索引返回第0
				  Menu_ui();
				}
				else
				{
					Show_Str(30+40,95+45+netpro*25+2,200,16,"________",16,1);//显示下划线,表示选中
					Show_Str(30+10,95+45+netpro*25,200,16,"-->",16,0);//指向新条目
					Menu_cfg(netpro);//参数配置
					LCD_Fill(30+40,95+45+netpro*25+2+15,30+40+100,95+45+netpro*25+2+18,WHITE);//清除下划线显示
				}
			}
			Show_Str(30+10,95+45+netpro*25,200,16,"-->",16,0);//指向新条目
		}
		t++;
		if(t==30)
		{
			t=0;
			LED1=~LED1;
		}
		delay_ms(10);
	}	
}
